# chord_machine2

./: .env  README.md  docker-compose.yaml  dockerfile  pyproject.toml  run_dev.sh
client/: package.json
client/public/: index.html  index.template.html
client/public/stylesheets/: chordForm.scss  chordLookup.scss  indexPage.scss  landingPage.scss  midi.scss  progressionShow.scss
client/src/assets/scss/: main.scss
client/src/components/: App.js
client/src/components/layout/: TopBar.js
client/src/components/music/: BigChordStats.js  ChordForm.js  ChordLookup.js  ChordReport.js  ChordStats.js  IndexPage.js  LandingPage.js  Midi.js  ProgressionShow.js  SheetMusic.js  SongTile.js  VexFlowComponent.js
client/src/components/music/musicTheory/: chordData.js  chordGenerator.js  nameLookup.js  noteTranslator.js
migrations/models/: 0_20220314220951_init.sql  0_20220316151604_init.sql  1_20220314221143_update.sql
server/: main.py
server/models/database/: Chords.py  Users.py  __init__.py
server/routes/v1/: chord_router.py  root_router.py  user_router.py
server/utils/: constants.py  db_manager.py
